apps/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: wordpress
    tier: frontend
